small edits to add MOM6 datasets

--- a/train_models/MITgcm_train_point_model_first_grad_CPU.ipynb
+++ b/train_models/MITgcm_train_point_model_first_grad_CPU.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f3ff7996-6e62-4182-9da3-29d5f8574dbf",
    "metadata": {
     "tags": []
@@ -141,7 +141,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss step 0:  0.5528765779894751 test loss: 0.28171310424804685\n"
+      "Train loss step 0:  0.5528765779894751 test loss: 0.28171310424804685\n",
+      "Train loss step 20:  0.06874454504734762 test loss: 0.07275833934545517\n",
+      "Train loss step 40:  0.06649527316157883 test loss: 0.0698857307434082\n",
+      "Train loss step 60:  0.06543284574070492 test loss: 0.06949509233236313\n",
+      "Train loss step 80:  0.06487924061916969 test loss: 0.06878065466880798\n",
+      "Train loss step 100:  0.06443510919406607 test loss: 0.06867463737726212\n",
+      "Train loss step 120:  0.06413858021433289 test loss: 0.06849873512983322\n",
+      "Train loss step 140:  0.06389994164173668 test loss: 0.06825530081987381\n",
+      "Train loss step 160:  0.06373528310576 test loss: 0.06817977130413055\n",
+      "Train loss step 180:  0.06359860250676 test loss: 0.0680821806192398\n",
+      "Train loss step 200:  0.0635239045966316 test loss: 0.0681017056107521\n",
+      "CPU times: user 13min 5s, sys: 14.5 s, total: 13min 19s\n",
+      "Wall time: 9min 10s\n"
      ]
     }
    ],
