para-perp_models

--- a/offline_analysis/data_MOM6p2l_ML_MITgcm_all_local_norm.ipynb
+++ b/offline_analysis/data_MOM6p2l_ML_MITgcm_all_local_norm.ipynb
@@ -35,9 +35,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-04 19:58:49.731055: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-03-04 19:58:49.731086: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-03-04 19:58:49.731091: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2024-03-08 19:32:24.899345: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-03-08 19:32:24.899381: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-03-08 19:32:24.899387: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
    },
    "outputs": [],
    "source": [
-    "model_nc  = '/home/jovyan/mesoscale_buoyancy_param_ML/ML_model_ncs/MITgcm_all_window_1_local_norm_true.nc'\n",
+    "model_nc  = '/home/jovyan/mesoscale_buoyancy_param_ML/ML_model_ncs/MITgcm_all_window_1_local_norm_true_out_para_perp.nc.nc'\n",
     "data_kind = 'MOM6_P2L' \n",
     "exp_name  = 'P2L' \n",
     "ML_name   = 'all'"
@@ -91,9 +91,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Local normed\n",
       "Dataset loaded from gs://leap-persistent/dhruvbalwada/MOM6/Phillips2Layer/res4km_sponge10day_long_ml_data_50km.zarr\n",
+      "Local normed\n",
       "Dataset loaded from gs://leap-persistent/dhruvbalwada/MOM6/Phillips2Layer/res4km_sponge10day_long_ml_data_100km.zarr\n",
+      "Local normed\n",
       "Dataset loaded from gs://leap-persistent/dhruvbalwada/MOM6/Phillips2Layer/res4km_sponge10day_long_ml_data_200km.zarr\n",
+      "Local normed\n",
       "Dataset loaded from gs://leap-persistent/dhruvbalwada/MOM6/Phillips2Layer/res4km_sponge10day_long_ml_data_400km.zarr\n"
      ]
     }
@@ -207,10 +211,10 @@
      "output_type": "stream",
      "text": [
       "R2:\n",
-      "50: 0.9197455772260054\n",
-      "100: 0.8749720602919587\n",
-      "200: 0.680335252307602\n",
-      "400: 0.5132419971982506\n"
+      "50: 0.9115558083838922\n",
+      "100: 0.8541960859191209\n",
+      "200: 0.6606731736830557\n",
+      "400: 0.50244137801305\n"
      ]
     }
    ],
@@ -232,110 +236,10 @@
      "output_type": "stream",
      "text": [
       "Corr:\n",
-      "50: 0.9593462494444752\n",
-      "100: 0.9372076166922071\n",
-      "200: 0.8301492004219593\n",
-      "400: 0.7402030439212272\n"
-     ]
-    }
-   ],
-   "source": [
-    "Lkeys = ['50', '100', '200', '400']\n",
-    "print('Corr:')\n",
-    "for L in Lkeys: \n",
-    "    print(L + ': ' + str(eval_dic[L].calc_corr(dims=['Time','xh','yh']).values) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "fd1288b9-99dd-45f2-8f0c-5b9492e5a275",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R2:\n",
-      "50: 0.9115558083838922\n",
-      "100: 0.8541960859191209\n",
-      "200: 0.6606731736830557\n",
-      "400: 0.50244137801305\n"
-     ]
-    }
-   ],
-   "source": [
-    "Lkeys = ['50', '100', '200', '400']\n",
-    "print('R2:')\n",
-    "for L in Lkeys: \n",
-    "    print(L + ': ' + str(eval_dic[L].calc_R2(dims=['Time','xh','yh']).values) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "47d1ed2e-1ec3-4562-bf6a-4d63139385d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Corr:\n",
       "50: 0.9553787287766395\n",
       "100: 0.9261727733280917\n",
       "200: 0.8189608117338316\n",
       "400: 0.7316367665320492\n"
-     ]
-    }
-   ],
-   "source": [
-    "Lkeys = ['50', '100', '200', '400']\n",
-    "print('Corr:')\n",
-    "for L in Lkeys: \n",
-    "    print(L + ': ' + str(eval_dic[L].calc_corr(dims=['Time','xh','yh']).values) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "45477e15-7a61-4e85-9af5-e66ae40ef517",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R2:\n",
-      "50: 0.9350180048801601\n",
-      "100: 0.900268987809881\n",
-      "200: 0.6901340120724202\n",
-      "400: 0.48755345905078207\n"
-     ]
-    }
-   ],
-   "source": [
-    "Lkeys = ['50', '100', '200', '400']\n",
-    "print('R2:')\n",
-    "for L in Lkeys: \n",
-    "    print(L + ': ' + str(eval_dic[L].calc_R2(dims=['Time','xh','yh']).values) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "34ebe728-406f-4477-8ea3-ee9222001946",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Corr:\n",
-      "50: 0.9735304466173692\n",
-      "100: 0.9511357497431389\n",
-      "200: 0.8379541625355235\n",
-      "400: 0.747384755984326\n"
      ]
     }
    ],
@@ -365,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7c2a4c1f6d10>"
+       "<matplotlib.legend.Legend at 0x78a560618c90>"
       ]
      },
      "execution_count": 10,
