--- a/train_models/local_normalizations/MITgcm_train_point_model_first_grad_wider_stencil_3_local_norm_all_res.ipynb
+++ b/train_models/local_normalizations/MITgcm_train_point_model_first_grad_wider_stencil_3_local_norm_all_res.ipynb
@@ -85,9 +85,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-06 19:27:25.720222: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-03-06 19:27:25.720256: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-03-06 19:27:25.720262: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2024-03-07 03:37:57.696444: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-03-07 03:37:57.696469: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-03-07 03:37:57.696474: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     "kind = 'MITgcm'\n",
     "MITgcm_bucket ='gs://leap-persistent/dhruvbalwada/m2lines_transfer'\n",
     "\n",
-    "window_size=5\n",
+    "window_size=3\n",
     "\n",
     "#fname = f'{MITgcm_bucket}/ML_data/ds_ML_'+L+'km_3D'\n",
     "    \n",
@@ -154,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test and train batches split. Number of batches: 34-3\n"
+      "Test and train batches split. Number of batches: 37-3\n"
      ]
     }
    ],
@@ -164,17 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0ec2b95f-fb67-45aa-9091-2196c7126456",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
    "source": [
     "ANN_model = ML_classes.ANN(num_in = len(ML_data.input_channels)* ML_data.window_size**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a0b206a3-37ec-4f67-95ce-664399078337",
    "metadata": {},
    "outputs": [],
@@ -192,13 +200,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss step 0:  30.401867768343756 test loss: 7.6052506764729815\n",
-      "Train loss step 1:  5.776936713386984 test loss: 5.104287465413411\n",
-      "Train loss step 2:  4.448240588693058 test loss: 4.310685634613037\n",
-      "Train loss step 3:  3.842209170846378 test loss: 3.800405581792196\n",
-      "Train loss step 4:  3.4289187403286205 test loss: 3.422105391820272\n",
-      "Train loss step 5:  3.1131021906347836 test loss: 3.112149159113566\n",
-      "Train loss step 6:  2.851506422547733 test loss: 2.856926361719767\n"
+      "Train loss step 1:  5.639505038390288 test loss: 5.091287136077881\n",
+      "Train loss step 2:  4.28468521221264 test loss: 4.052762508392334\n",
+      "Train loss step 3:  3.4939073356422217 test loss: 3.3730951150258384\n",
+      "Train loss step 4:  2.986228524027644 test loss: 2.92079750696818\n",
+      "Train loss step 5:  2.6372622412604256 test loss: 2.6157044569651284\n",
+      "Train loss step 6:  2.3948398989600106 test loss: 2.393982251485189\n",
+      "Train loss step 7:  2.218051440006978 test loss: 2.2337985833485923\n",
+      "Train loss step 8:  2.088371225305506 test loss: 2.1238839626312256\n",
+      "Train loss step 10:  1.9265527950750816 test loss: 1.9760491053263347\n",
+      "Train loss step 11:  1.870420884441685 test loss: 1.9257067839304607\n",
+      "Train loss step 12:  1.82491304423358 test loss: 1.8809879223505657\n",
+      "Train loss step 13:  1.7857789510005229 test loss: 1.8391656478246052\n",
+      "Train loss step 14:  1.7504124931387 test loss: 1.8018362124760945\n",
+      "Train loss step 15:  1.7173999451302193 test loss: 1.7738603750864665\n",
+      "Train loss step 16:  1.6902706494202484 test loss: 1.7456021706263225\n",
+      "Train loss step 17:  1.6657336209271405 test loss: 1.7196790774663289\n",
+      "Train loss step 18:  1.6429653522130605 test loss: 1.6969269116719563\n",
+      "Train loss step 19:  1.622367440043269 test loss: 1.6758921146392822\n",
+      "Train loss step 20:  1.6028966968123977 test loss: 1.6541293859481812\n",
+      "Train loss step 21:  1.5832961539964419 test loss: 1.6347249348958333\n",
+      "Train loss step 22:  1.564990385158642 test loss: 1.6153368949890137\n",
+      "Train loss step 23:  1.5485619081033242 test loss: 1.5981169541676838\n",
+      "Train loss step 24:  1.5327870942450859 test loss: 1.5809598366419475\n",
+      "Train loss step 25:  1.5171778975306331 test loss: 1.564219077428182\n",
+      "Train loss step 26:  1.50199158771618 test loss: 1.547804832458496\n",
+      "Train loss step 27:  1.4875671348056279 test loss: 1.5319862763086955\n",
+      "Train loss step 28:  1.4733431145951554 test loss: 1.516920804977417\n",
+      "Train loss step 29:  1.4594361073261983 test loss: 1.5033446947733562\n",
+      "Train loss step 30:  1.4447398153511253 test loss: 1.4909080664316814\n",
+      "Train loss step 31:  1.431748950803602 test loss: 1.4775363206863403\n",
+      "Train loss step 32:  1.4196385531812101 test loss: 1.4640203317006428\n",
+      "Train loss step 33:  1.407957611857234 test loss: 1.4523807366689045\n",
+      "Train loss step 34:  1.3971378674378265 test loss: 1.4408846298853557\n",
+      "Train loss step 35:  1.3874086109367576 test loss: 1.429468075434367\n",
+      "Train loss step 36:  1.3771038055419922 test loss: 1.4192194938659668\n",
+      "Train loss step 37:  1.3669050641962 test loss: 1.4106544653574626\n",
+      "Train loss step 38:  1.3576873154253573 test loss: 1.399489204088847\n",
+      "Train loss step 39:  1.348611541696497 test loss: 1.3919070959091187\n",
+      "Train loss step 40:  1.33968169624741 test loss: 1.3861668904622395\n",
+      "Train loss step 41:  1.3314089356242 test loss: 1.3766409953435261\n",
+      "Train loss step 42:  1.3233677052162789 test loss: 1.3673851887385051\n",
+      "Train loss step 43:  1.315224196459796 test loss: 1.3615595897038777\n",
+      "Train loss step 44:  1.3088294525404234 test loss: 1.3541946013768513\n",
+      "Train loss step 45:  1.300289595449293 test loss: 1.3464247385660808\n",
+      "Train loss step 46:  1.2941050722792342 test loss: 1.3402191400527954\n",
+      "Train loss step 47:  1.2864386487651516 test loss: 1.3316449324289958\n",
+      "Train loss step 48:  1.2799207906465273 test loss: 1.3220334847768147\n",
+      "Train loss step 49:  1.272360608384416 test loss: 1.319143573443095\n",
+      "Train loss step 50:  1.2670424757777035 test loss: 1.311123291651408\n",
+      "Train loss step 51:  1.2587765100839976 test loss: 1.3085192044576008\n",
+      "Train loss step 52:  1.2548365013019458 test loss: 1.3049776951471965\n",
+      "Train loss step 53:  1.2450408226734884 test loss: 1.2986697753270466\n",
+      "Train loss step 54:  1.240596503824801 test loss: 1.3034882148106892\n",
+      "Train loss step 55:  1.2341034509040214 test loss: 1.2967845996220906\n",
+      "Train loss step 56:  1.2277896726453625 test loss: 1.2907239198684692\n",
+      "Train loss step 57:  1.2205422053465973 test loss: 1.273573915163676\n",
+      "Train loss step 58:  1.2094435369646228 test loss: 1.251075545946757\n",
+      "Train loss step 59:  1.2175678143630158 test loss: 1.2717023690541585\n",
+      "Train loss step 60:  1.2005077052760769 test loss: 1.241827090581258\n",
+      "Train loss step 61:  1.2058183792475108 test loss: 1.2729673782984416\n",
+      "Train loss step 62:  1.1931682277370144 test loss: 1.2336734135945637\n",
+      "Train loss step 63:  1.1882757753939241 test loss: 1.2348787387212117\n",
+      "Train loss step 64:  1.1822128908054248 test loss: 1.264341672261556\n",
+      "Train loss step 65:  1.1774444483421944 test loss: 1.2238920132319133\n",
+      "Train loss step 66:  1.2085881136559151 test loss: 1.229774276415507\n",
+      "Train loss step 67:  1.1671815047392975 test loss: 1.2358687321345012\n",
+      "Train loss step 68:  1.1610056516286489 test loss: 1.2078866958618164\n",
+      "Train loss step 69:  1.1653972380870097 test loss: 1.2144221862157185\n",
+      "Train loss step 70:  1.1615615825395327 test loss: 1.2012808322906494\n",
+      "Train loss step 71:  1.1568474221873928 test loss: 1.1978984673817952\n",
+      "Train loss step 73:  1.1526346238883767 test loss: 1.1975148916244507\n",
+      "Train loss step 74:  1.150536517839174 test loss: 1.2093226512273152\n",
+      "Train loss step 75:  1.144255518913269 test loss: 1.1906693776448567\n",
+      "Train loss step 76:  1.1588689443227407 test loss: 1.1873093446095784\n",
+      "Train loss step 77:  1.131200097702645 test loss: 1.1863868633906047\n",
+      "Train loss step 78:  1.1622013820184243 test loss: 1.2045905590057373\n",
+      "Train loss step 79:  1.124697740013535 test loss: 1.1828154722849529\n",
+      "Train loss step 80:  1.1482026319246035 test loss: 1.1859937906265259\n",
+      "Train loss step 81:  1.1209993008020762 test loss: 1.1778936783472698\n",
+      "Train loss step 82:  1.1468539527944617 test loss: 1.1924641529719036\n",
+      "Train loss step 83:  1.1146975369066805 test loss: 1.1728775103886921\n",
+      "Train loss step 84:  1.1454410907384511 test loss: 1.1915351152420044\n",
+      "Train loss step 85:  1.1101446892764117 test loss: 1.1682962973912556\n",
+      "Train loss step 86:  1.1388260738269702 test loss: 1.1855346361796062\n",
+      "Train loss step 87:  1.1073475463970288 test loss: 1.164146900177002\n",
+      "Train loss step 88:  1.13195737310358 test loss: 1.1762759685516357\n",
+      "Train loss step 89:  1.1065293776022422 test loss: 1.162563641866048\n",
+      "Train loss step 90:  1.1228237570943058 test loss: 1.158727725346883\n",
+      "Train loss step 91:  1.106510094694189 test loss: 1.1778034766515095\n",
+      "Train loss step 92:  1.1053388440931164 test loss: 1.1531630754470825\n",
+      "Train loss step 93:  1.1218001810280052 test loss: 1.160526156425476\n"
      ]
     }
    ],
