--- a/train_models/local_normalizations/MITgcm_train_point_model_first_grad_wider_stencil_5_local_norm_all_res.ipynb
+++ b/train_models/local_normalizations/MITgcm_train_point_model_first_grad_wider_stencil_5_local_norm_all_res.ipynb
@@ -85,9 +85,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-06 19:23:30.795670: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-03-06 19:23:30.795699: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-03-06 19:23:30.795705: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2024-03-07 03:37:45.801503: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-03-07 03:37:45.801530: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-03-07 03:37:45.801536: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     "kind = 'MITgcm'\n",
     "MITgcm_bucket ='gs://leap-persistent/dhruvbalwada/m2lines_transfer'\n",
     "\n",
-    "window_size=3\n",
+    "window_size=5\n",
     "\n",
     "#fname = f'{MITgcm_bucket}/ML_data/ds_ML_'+L+'km_3D'\n",
     "    \n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3f46e969-1ff4-4479-be7b-5f5af6f10a5c",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test and train batches split. Number of batches: 37-3\n"
+      "Test and train batches split. Number of batches: 34-3\n"
      ]
     }
    ],
@@ -164,17 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0ec2b95f-fb67-45aa-9091-2196c7126456",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
    "source": [
     "ANN_model = ML_classes.ANN(num_in = len(ML_data.input_channels)* ML_data.window_size**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a0b206a3-37ec-4f67-95ce-664399078337",
    "metadata": {},
    "outputs": [],
@@ -192,13 +200,102 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss step 0:  29.297597202094824 test loss: 7.325414180755615\n",
-      "Train loss step 1:  5.58812851519198 test loss: 5.0688150723775225\n",
-      "Train loss step 2:  4.257964991234444 test loss: 4.0447312990824384\n",
-      "Train loss step 3:  3.4817491544259562 test loss: 3.3772428035736084\n",
-      "Train loss step 4:  2.9777460807078593 test loss: 2.9263970851898193\n",
-      "Train loss step 5:  2.63395399016303 test loss: 2.6230706373850503\n",
-      "Train loss step 6:  2.392902090742781 test loss: 2.4026482105255127\n"
+      "Train loss step 0:  30.468095358680277 test loss: 7.647576967875163\n",
+      "Train loss step 1:  5.785754680633545 test loss: 5.095185279846191\n",
+      "Train loss step 2:  4.429693053750431 test loss: 4.283090273539226\n",
+      "Train loss step 3:  3.8143265527837418 test loss: 3.7626520792643228\n",
+      "Train loss step 4:  3.402956675080692 test loss: 3.384646733601888\n",
+      "Train loss step 5:  3.0910041402367985 test loss: 3.0912421544392905\n",
+      "Train loss step 6:  2.835219235981212 test loss: 2.846092859903971\n",
+      "Train loss step 7:  2.6212588478537167 test loss: 2.631568113962809\n",
+      "Train loss step 8:  2.4377788445528816 test loss: 2.4469101428985596\n",
+      "Train loss step 9:  2.2795817501404705 test loss: 2.294849952061971\n",
+      "Train loss step 10:  2.1509671842350677 test loss: 2.1582226753234863\n",
+      "Train loss step 11:  2.0467838960535385 test loss: 2.050123612085978\n",
+      "Train loss step 12:  1.950069553711835 test loss: 1.9684714873631795\n",
+      "Train loss step 13:  1.8789802368949442 test loss: 1.901749571164449\n",
+      "Train loss step 14:  1.801613632370444 test loss: 1.8098113139470418\n",
+      "Train loss step 15:  1.759850782506606 test loss: 1.7510356108347576\n",
+      "Train loss step 16:  1.695733063361224 test loss: 1.7060647010803223\n",
+      "Train loss step 17:  1.6370594326187582 test loss: 1.649491548538208\n",
+      "Train loss step 18:  1.5962950692457312 test loss: 1.6063400506973267\n",
+      "Train loss step 19:  1.583380772786982 test loss: 1.6107482115427654\n",
+      "Train loss step 20:  1.5217454959364498 test loss: 1.5373891194661458\n",
+      "Train loss step 21:  1.5165991011787863 test loss: 1.6215984026590984\n",
+      "Train loss step 22:  1.466920603724087 test loss: 1.5067256689071655\n",
+      "Train loss step 23:  1.4320267228519215 test loss: 1.4450697898864746\n",
+      "Train loss step 24:  1.4234749534550835 test loss: 1.4340269565582275\n",
+      "Train loss step 25:  1.3897731795030481 test loss: 1.4376884698867798\n",
+      "Train loss step 26:  1.3646618338192211 test loss: 1.3723353147506714\n",
+      "Train loss step 27:  1.3561103414086735 test loss: 1.3683377901713054\n",
+      "Train loss step 28:  1.3295265190741594 test loss: 1.3870586156845093\n",
+      "Train loss step 29:  1.3083275030640995 test loss: 1.3733183940251668\n",
+      "Train loss step 30:  1.288036988062017 test loss: 1.3010647296905518\n",
+      "Train loss step 31:  1.2837235541904675 test loss: 1.305553674697876\n",
+      "Train loss step 32:  1.2603040127193226 test loss: 1.3067742983500164\n",
+      "Train loss step 33:  1.2425137512824114 test loss: 1.3248722950617473\n",
+      "Train loss step 34:  1.226889449007371 test loss: 1.269927740097046\n",
+      "Train loss step 35:  1.2131707072257996 test loss: 1.2939189672470093\n",
+      "Train loss step 36:  1.2015168281162487 test loss: 1.2203430732091267\n",
+      "Train loss step 37:  1.2005418644231909 test loss: 1.2009694973627727\n",
+      "Train loss step 38:  1.1801746733048384 test loss: 1.3042945464452107\n",
+      "Train loss step 39:  1.179687598172356 test loss: 1.2367063363393147\n",
+      "Train loss step 40:  1.1627943796270035 test loss: 1.2005801598230998\n",
+      "Train loss step 41:  1.1500901720103096 test loss: 1.2377001841862996\n",
+      "Train loss step 42:  1.1406037106233484 test loss: 1.2380385796229045\n",
+      "Train loss step 43:  1.127838769379784 test loss: 1.1928397417068481\n",
+      "Train loss step 44:  1.1167471303659326 test loss: 1.1448361078898113\n",
+      "Train loss step 45:  1.117840612635893 test loss: 1.128406246503194\n",
+      "Train loss step 46:  1.0996471152586096 test loss: 1.1901518106460571\n",
+      "Train loss step 47:  1.0939909710603601 test loss: 1.1200467348098755\n",
+      "Train loss step 48:  1.081375753178316 test loss: 1.1300177176793416\n",
+      "Train loss step 49:  1.081773042678833 test loss: 1.087720235188802\n",
+      "Train loss step 50:  1.0610542297363281 test loss: 1.0933582782745361\n",
+      "Train loss step 51:  1.0781800852102392 test loss: 1.0815222263336182\n",
+      "Train loss step 52:  1.0565795793252832 test loss: 1.1182482639948528\n",
+      "Train loss step 53:  1.0481447472291834 test loss: 1.0692471265792847\n",
+      "Train loss step 55:  1.0291346907615662 test loss: 1.066297173500061\n",
+      "Train loss step 56:  1.0417329458629383 test loss: 1.125747799873352\n",
+      "Train loss step 57:  1.0246637042830973 test loss: 1.04679274559021\n",
+      "Train loss step 58:  1.0168927680043613 test loss: 1.0420430898666382\n",
+      "Train loss step 59:  1.0161725791061627 test loss: 1.0330257813135784\n",
+      "Train loss step 60:  1.0077693514964159 test loss: 1.105538050333659\n",
+      "Train loss step 61:  0.9946090701748344 test loss: 1.0277783075968425\n",
+      "Train loss step 62:  1.0014592935057247 test loss: 1.0170718431472778\n",
+      "Train loss step 63:  0.9889530364204856 test loss: 1.0197547674179077\n",
+      "Train loss step 64:  1.0050937515847824 test loss: 1.0707412958145142\n",
+      "Train loss step 65:  0.9880454101983238 test loss: 1.0300904512405396\n",
+      "Train loss step 66:  0.9745625047122731 test loss: 1.0530489285786946\n",
+      "Train loss step 67:  0.973186103736653 test loss: 1.0180859168370564\n",
+      "Train loss step 68:  0.9788385208915261 test loss: 1.0111399094263713\n",
+      "Train loss step 69:  0.9736324075390311 test loss: 1.0017184813817341\n",
+      "Train loss step 70:  0.9571792378145105 test loss: 1.0355860392252605\n",
+      "Train loss step 71:  0.9569414065164679 test loss: 1.0105136632919312\n",
+      "Train loss step 72:  0.9539785893524394 test loss: 1.050878922144572\n",
+      "Train loss step 73:  0.952891642556471 test loss: 1.070094148317973\n",
+      "Train loss step 74:  0.9420764043050653 test loss: 0.9762081106503805\n",
+      "Train loss step 75:  0.9428427692721871 test loss: 0.9995647072792053\n",
+      "Train loss step 76:  0.9398982752771938 test loss: 0.9610080718994141\n",
+      "Train loss step 77:  0.9316045519183663 test loss: 0.9885391990343729\n",
+      "Train loss step 78:  0.9546668652225944 test loss: 0.9963239431381226\n",
+      "Train loss step 79:  0.9410973962615518 test loss: 0.9598352909088135\n",
+      "Train loss step 80:  0.9204077247311088 test loss: 0.9928550322850546\n",
+      "Train loss step 81:  0.9228036088102004 test loss: 0.9520156780878702\n",
+      "Train loss step 82:  0.9232514114940867 test loss: 0.9430168668429056\n",
+      "Train loss step 83:  0.9306930023081162 test loss: 0.9678600629170736\n",
+      "Train loss step 84:  0.905395078308442 test loss: 0.9400154749552408\n",
+      "Train loss step 85:  0.9253861974267399 test loss: 0.9577667117118835\n",
+      "Train loss step 86:  0.9194631944684422 test loss: 1.0448267459869385\n",
+      "Train loss step 87:  0.9118246716611526 test loss: 1.0095999638239543\n",
+      "Train loss step 88:  0.9044463424121633 test loss: 0.9346084992090861\n",
+      "Train loss step 89:  0.9258036140133353 test loss: 0.9444733063379923\n",
+      "Train loss step 90:  0.9020722718799815 test loss: 0.9812395970026652\n",
+      "Train loss step 91:  0.9004333667895373 test loss: 0.9726460774739584\n",
+      "Train loss step 92:  0.90130413981045 test loss: 0.9425474603970846\n",
+      "Train loss step 93:  0.9085647621575523 test loss: 0.9534141023953756\n",
+      "Train loss step 94:  0.8970029950141907 test loss: 0.9203487634658813\n",
+      "Train loss step 95:  0.8997516491833855 test loss: 0.9702089627583822\n",
+      "Train loss step 96:  0.8998638724579531 test loss: 0.9096691608428955\n"
      ]
     }
    ],
