some diffusive testing

--- a/train_models/para_perp_models/MITgcm_train_point_model_first_grad_wider_stencil_3_local_norm_all_res_diffusive_prep.ipynb
+++ b/train_models/para_perp_models/MITgcm_train_point_model_first_grad_wider_stencil_3_local_norm_all_res_diffusive_prep.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ad043a62-6446-40b0-8bd7-8712907e3300",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dca44cb6-627e-429d-89d6-60b0e98062be",
    "metadata": {
     "tags": []
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9db7b11a-4742-4a72-b6e1-798605887040",
    "metadata": {
     "tags": []
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "089dd712-243a-4910-85c5-a201d181ff2c",
    "metadata": {
     "tags": []
@@ -85,9 +85,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-09 04:05:02.218611: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-03-09 04:05:02.218633: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-03-09 04:05:02.218638: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2024-03-10 18:19:49.172043: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-03-10 18:19:49.172068: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-03-10 18:19:49.172074: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3d8e3f6f-4dc2-44e9-ad01-6acc930b483d",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "5efe17a1-a8f9-4897-803a-ccaf8bf227f6",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3f46e969-1ff4-4479-be7b-5f5af6f10a5c",
    "metadata": {},
    "outputs": [
@@ -178,10 +178,18 @@
      "text": [
       "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diffuse\n"
+     ]
     }
    ],
    "source": [
-    "ANN_model = ML_classes.ANN(num_in = len(ML_data.input_channels)* ML_data.window_size**2)"
+    "ANN_model = ML_classes.ANN(num_in = len(ML_data.input_channels)* ML_data.window_size**2,\n",
+    "                          diffuse=True)"
    ]
   },
   {
@@ -191,46 +199,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regress_sys = ML_classes.RegressionSystem(ANN_model, local_norm=True)"
+    "regress_sys = ML_classes.RegressionSystem(ANN_model, local_norm=True, diffuse=False )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5ed1683e-227d-4ea5-a6d1-f87dae20b5a4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'regress_sys' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32m<timed eval>:1\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'regress_sys' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss step 0:  22.78257116111549 test loss: 8.592365582784018\n",
+      "Train loss step 1:  7.354435237678322 test loss: 7.331535816192627\n",
+      "Train loss step 2:  6.568130506051554 test loss: 6.75349219640096\n",
+      "Train loss step 3:  6.139303877546981 test loss: 6.399985313415527\n",
+      "Train loss step 4:  5.869473521773879 test loss: 6.166664282480876\n",
+      "Train loss step 5:  5.695498066979486 test loss: 6.000431219736735\n",
+      "Train loss step 6:  5.558534158242716 test loss: 5.8575394948323565\n",
+      "Train loss step 7:  5.448714166074185 test loss: 5.7267537117004395\n",
+      "Train loss step 8:  5.360852009541279 test loss: 5.638345400492351\n",
+      "Train loss step 9:  5.297963013520112 test loss: 5.571995099385579\n",
+      "Train loss step 10:  5.251861443390718 test loss: 5.52679427464803\n",
+      "Train loss step 11:  5.211811181661245 test loss: 5.485200723012288\n",
+      "Train loss step 12:  5.175223543837264 test loss: 5.452654997507731\n",
+      "Train loss step 13:  5.1458757761362435 test loss: 5.423910776774089\n",
+      "Train loss step 14:  5.117284826330237 test loss: 5.394456068674724\n",
+      "Train loss step 15:  5.093589615177464 test loss: 5.368343194325765\n",
+      "Train loss step 16:  5.070449017189644 test loss: 5.342671871185303\n",
+      "Train loss step 17:  5.049489214613631 test loss: 5.315855662027995\n",
+      "Train loss step 18:  5.030725285813615 test loss: 5.291179815928142\n",
+      "Train loss step 19:  5.013055814279093 test loss: 5.276483217875163\n",
+      "Train loss step 20:  4.999354607350117 test loss: 5.275952974955241\n",
+      "Train loss step 21:  4.985592429702346 test loss: 5.266716639200847\n",
+      "Train loss step 22:  4.974676389951964 test loss: 5.258982022603353\n",
+      "Train loss step 23:  4.963491787781587 test loss: 5.252989768981934\n",
+      "Train loss step 24:  4.952552241248053 test loss: 5.244795322418213\n",
+      "Train loss step 25:  4.943426763689196 test loss: 5.241745948791504\n",
+      "Train loss step 26:  4.932417624705547 test loss: 5.2279205322265625\n",
+      "Train loss step 27:  4.926512782638137 test loss: 5.21187686920166\n",
+      "Train loss step 28:  4.917471434618975 test loss: 5.228359699249268\n",
+      "Train loss step 29:  4.905278025446711 test loss: 5.201981862386067\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "regress_sys.train_system_windowed(ML_data, 101, 1)"
+    "regress_sys.train_system_windowed(ML_data, 41, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3a609e77-eed8-43bb-a366-9f408012ee96",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the checkpoint\n",
-    "CKPT_DIR = '/home/jovyan/mesoscale_buoyancy_param_ML/ML_checkpoints/ckpts_all_MITgcm_window_'+str(window_size)+'_local_norm_true_out_para_perp'\n",
+    "CKPT_DIR = '/home/jovyan/mesoscale_buoyancy_param_ML/ML_checkpoints/ckpts_all_MITgcm_window_'+str(window_size)+'_local_norm_true_out_para_perp_diffusive'\n",
     "regress_sys.save_checkpoint(CKPT_DIR)\n",
     "\n",
     "# Save model nc file\n",
-    "model_nc = '/home/jovyan/mesoscale_buoyancy_param_ML/ML_model_ncs/' +'MITgcm_all_window_'+str(window_size)+'_local_norm_true_out_para_perp'+'.nc'\n",
+    "model_nc = '/home/jovyan/mesoscale_buoyancy_param_ML/ML_model_ncs/' +'MITgcm_all_window_'+str(window_size)+'_local_norm_true_out_para_perp_diffusive'+'.nc'\n",
     "regress_sys.save_weights_nc(model_nc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9c76ef-c2ca-4a31-bdd7-4f7653248604",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Loss plot\n",
+    "plt.plot(regress_sys.train_loss, label='Training loss, '+str(regress_sys.train_loss[-1]))\n",
+    "plt.plot(regress_sys.test_loss, label='Test loss'+str(regress_sys.test_loss[-1]))\n",
+    "\n",
+    "plt.title('Loss curve')\n",
+    "plt.grid()\n",
+    "plt.yscale('log')\n",
+    "plt.legend()\n",
+    "plt.savefig('window_3_local_para_perp_diffusive.pdf')"
    ]
   },
   {
@@ -258,8 +309,7 @@
     "plt.title('Loss curve')\n",
     "plt.grid()\n",
     "plt.yscale('log')\n",
-    "plt.legend()\n",
-    "plt.savefig('window_3_local_para_perp.pdf')"
+    "plt.legend()\n"
    ]
   },
   {
