--- a/module_dev_notebooks/test_modules.ipynb
+++ b/module_dev_notebooks/test_modules.ipynb
@@ -5,7 +5,7 @@
    "id": "c14cbae1-61e6-4bc4-bf31-9608f466725e",
    "metadata": {},
    "source": [
-    "## Test modules during dev\n"
+    "# An example showing how different modules work"
    ]
   },
   {
@@ -79,6 +79,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1bec9feb-ddb7-4fb1-8b15-c267b348f0bb",
+   "metadata": {},
+   "source": [
+    "## Setup experiment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "ea2f394b-b269-43ab-b566-fe93aec60fe1",
@@ -129,7 +137,8 @@
    "id": "63aadad9-5bde-4e2f-9083-cc72e10fa288",
    "metadata": {},
    "source": [
-    "## Load data for different simulations and prepare it with right variables and non-dims.\n",
+    "## SimulationData Module\n",
+    "#### Load data for different simulations and prepare it with right variables and non-dims.\n",
     "\n",
     "In this step all the variables and extra dimensions may be created that were not originally present. \n",
     "Each input and output variable gets its own containing variable (e.g. if top and bottom layer were two separate inputs, then in this step they may get separated out). \n",
@@ -26907,8 +26916,9 @@
    "id": "85401936-1389-4710-b4ae-c0a00639babe",
    "metadata": {},
    "source": [
-    "## ML data\n",
-    "Go from simulation data to batches. \n",
+    "## MLXarrayDAtaset \n",
+    "\n",
+    "Go from simulation data to batchesm but still as Xarray objects. \n",
     "In this step things like dropping extra points, masking of data etc happen. "
    ]
   },
@@ -27565,6 +27575,8 @@
    "id": "6900f43b-9f79-4bbf-a919-574a6f6e850e",
    "metadata": {},
    "source": [
+    "## MLJAXDataset \n",
+    "\n",
     "### Convert these xbatcher batches to processed ones for training\n",
     "\n",
     "This needs to take care of extra dims, like Xn,Yn."
@@ -27726,7 +27738,7 @@
    "id": "abf67057-2dd3-4650-b205-05f641a01307",
    "metadata": {},
    "source": [
-    "## The ML part\n"
+    "## AnnRegressionSystem (and associated NN setup modules ArtificialNeuralNetwork and PointwiseANN).\n"
    ]
   },
   {
@@ -27919,7 +27931,7 @@
    "id": "04a2332e-cf4d-4cf3-8ee9-2d17ff9bbd53",
    "metadata": {},
    "source": [
-    "Making predictions. "
+    "Making predictions using some batch. "
    ]
   },
   {
@@ -27999,22 +28011,30 @@
    "source": [
     "plt.plot(y_true[:,0])\n",
     "plt.plot(y_pred[:,0])\n",
-    "plt.plot(y_true[:,0]- y_pred[:,0])\n",
-    "\n"
+    "plt.plot(y_true[:,0]- y_pred[:,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d4562fd-7ffb-4980-a893-c00e0d86077c",
+   "metadata": {},
+   "source": [
+    "The above prediction method works, but we would like a little more functionality. \n",
+    "We want to be able to make predictions on the original grids and structure of the data (e.g. at different scales), so we can track performance in real space (rather than sample space). To do all this, we will be developing an evaluation module. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffbda365-2ba3-48df-a514-ae31e2239b7d",
+   "metadata": {},
+   "source": [
+    "## Evaluation Module"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb422a4-d0b0-4158-b0bc-c03584da110a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c79a3bfe-92f3-46a7-aefe-959ef78e3e74",
+   "id": "95cec9ef-eb4a-4eca-9815-4d05d3896491",
    "metadata": {},
    "outputs": [],
    "source": []
